# minibot_control

./: README.md
minibot_control/: CMakeLists.txt  package.xml
pedestrian_reacting/: CMakeLists.txt  package.xml
pedestrian_reacting/src/: reacting.py
pedestrian_tracking/: CMakeLists.txt  package.xml
pedestrian_tracking/launch/: jetson_python2.launch  jetson_python3.launch  tracking_and_reacting.launch
pedestrian_tracking/msg/: PedestrianInfos.msg
pedestrian_tracking/rviz/: start.rviz
pedestrian_tracking/src/: bridge_python2.py  bridge_python3.py  tracking.py  visualizing.py
shared_control/gazebo/: base_local_planner_params.yaml
shared_control/launch/: minibot.launch  navigation.launch  start.launch
shared_control/rviz/: start.rviz
shared_control/src/: interface.py  task_plan.py
